@@ -98,7 +98,7 @@ public class NoRemainderShapedBuilder implements RecipeBuilder {
 	 * Adds a new entry to the patterns for this recipe.
 	 */
 	public NoRemainderShapedBuilder pattern(String pattern) {
-		if (!this.rows.isEmpty() && pattern.length() != this.rows.get(0).length()) {
+		if (!this.rows.isEmpty() && pattern.length() != this.rows.getFirst().length()) {
 			throw new IllegalArgumentException("Pattern must be the same width on every line!");
 		} else {
 			this.rows.add(pattern);
